--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,14 @@ html {
   scroll-behavior: smooth;
 }
 
+.section {
+  min-height: 100vh;
+}
+
+#avatar  {
+  margin-top: 4em;
+}
+
 #header {
   margin-top: 4em;
 }
@@ -14,7 +22,7 @@ html {
   margin: 0em;
 }
 
-body .container {
+.container {
   padding: 2em;
 }
 
@@ -26,9 +34,12 @@ h1 {
   padding-bottom: .65em;
 }
 
+#project-h1 {
+  margin-bottom: 0;
+}
+
 .subheading {
   text-align: center;
-  margin-bottom: 4em;
   font-style: italic;
 }
 
@@ -117,6 +128,19 @@ body > .container-fluid:nth-child(even) {
   opacity: 1;
   display: inline-block;
   animation: blink .533s linear 2.8s infinite alternate;
+}
+
+.modal-content {
+  background-color: transparent;
+  border: 0;
+}
+
+.project-h3 {
+  margin-top: 2em;
+}
+
+.modal {
+  width: 100%;
 }
 
 @keyframes blink {
